--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,6 +5,12 @@
     <link rel="icon" type="image/png" href="/logo-tanpa-bg.png" />
     <link rel="apple-touch-icon" href="/logo-tanpa-bg.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- Google Fonts - Inter -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
+
     <title>DocsCrypt - Enkripsi Dokumen</title>
   </head>
   <body>
